Fixing java command (issue #2)